...
                    Form(
                      key: _formKey,
                      child: Column(children: [
                        SizedBox(
                          width: MediaQuery.of(context).size.width * 0.8,
                          child: TextFormField(
                            key: const Key('login_un'),
                            onChanged: (String value) {
                              username = value;
                            },
                            style: const TextStyle(
                                color: Colors.white,
                                fontSize: 16,
...
                            },
                          ),
                        ),
                        SizedBox(
                          width: MediaQuery.of(context).size.width * 0.8,
                          child: TextFormField(
                            key: const Key('login_pw'),
                            onChanged: (String value) {
                              password = value;
                            },
                            obscureText: true,
                            style: const TextStyle(
                                color: Colors.white,
...
                        ),
                      ]),
                    ),
                    Padding(
                        padding: const EdgeInsets.only(top: 20),
                        child: TextButton(
                            key: Key('submitlogin_btn'),
                            onPressed: () async {
                              if (_formKey.currentState!.validate()) {
                                var response =
                                    await userLogin(username, password);
                                if (response['success']) {
                                  Navigator.pop(context);
...
                    Form(
                      key: _formKey,
                      child: Column(children: [
                        SizedBox(
                          width: MediaQuery.of(context).size.width * 0.8,
                          child: TextFormField(
                            key: const Key('reg_fname'),
                            onChanged: (String value) {
                              firstName = value;
                            },
                            style: const TextStyle(
                                color: Colors.white,
                                fontSize: 16,
...
                            },
                          ),
                        ),
                        SizedBox(
                          width: MediaQuery.of(context).size.width * 0.8,
                          child: TextFormField(
                            key: const Key('reg_lname'),
                            onChanged: (String value) {
                              lastName = value;
                            },
                            style: const TextStyle(
                                color: Colors.white,
                                fontSize: 16,
...
                            },
                          ),
                        ),
                        SizedBox(
                          width: MediaQuery.of(context).size.width * 0.8,
                          child: TextFormField(
                            key: const Key('reg_uname'),
                            onChanged: (String value) {
                              username = value;
                            },
                            style: const TextStyle(
                                color: Colors.white,
                                fontSize: 16,
...
                            },
                          ),
                        ),
                        SizedBox(
                          width: MediaQuery.of(context).size.width * 0.8,
                          child: TextFormField(
                            key: const Key('reg_pass'),
                            onChanged: (String value) {
                              password = value;
                            },
                            obscureText: true,
                            style: const TextStyle(
                                color: Colors.white,
...
                        ),
                      ]),
                    ),
                    Padding(
                        padding: const EdgeInsets.only(top: 20),
                        child: TextButton(
                            key: Key('reg_submit'),
                            onPressed: () async {
                              if (_formKey.currentState!.validate()) {
                                var response = await userRegister(
                                    username, password, firstName, lastName);
                                var status, message, color;

...
        });
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
        key: Key('splash_page'),
        body: Container(
            // alignment: Alignment.center,
            decoration:
                BoxDecoration(color: Theme.of(context).colorScheme.tertiary),
            child: Column(
                mainAxisAlignment: MainAxisAlignment.end,
...
                      )),
                  Padding(
                    padding: const EdgeInsets.fromLTRB(30, 0, 10, 0),
                    child: Row(
                      children: <Widget>[
                        OutlinedButton(
                            key: const Key('login_btn'),
                            onPressed: () {
                              setState(() {
                                loginSheet(context);
                              });
                            },
                            child: const Padding(
...
                                  width: 2,
                                  color: Theme.of(context).primaryColor),
                            )),
                        Padding(
                          padding: const EdgeInsets.all(10),
                          child: TextButton(
                              key: Key('regbutton'),
                              onPressed: () {
                                regSheet(context);
                              },
                              child: const Padding(
                                padding: EdgeInsets.fromLTRB(5, 0, 5, 0),
                                child: Text(
...
