...
                    padding: const EdgeInsets.only(bottom: 50),
                    child: Column(children: [
                      Padding(
                          padding:
                              EdgeInsets.only(left: 20, right: 20, top: 30),
                          child: TextField(
                            key: Key('edit_text'),
                            controller: controller,
                            onChanged: (value) => edited_text = value,
                            maxLines: 3,
                            style: TextStyle(color: Colors.white),
                            decoration: InputDecoration(
                                enabledBorder: OutlineInputBorder(
...
                                      mystate(() {
                                        edit_public = true;
                                      });
                                    },
                                  ),
                                  IconButton(
                                    key: Key('edit_priv'),
                                    iconSize: 35,
                                    icon: Icon(
                                      Icons.group,
                                      color: edit_public
                                          ? Colors.grey
                                          : Theme.of(context)
...
                              )
                            ],
                          )),
                      Padding(
                          padding: EdgeInsets.only(top: 50),
                          child: ElevatedButton(
                            key: Key('edit_submit'),
                            onPressed: () async {
                              var response =
                                  await editPost(id, edited_text, edit_public);

                              if (response['success']) {
                                var p = response['data'];
...
                    padding: const EdgeInsets.only(bottom: 20),
                    child: Column(children: [
                      Padding(
                          padding:
                              EdgeInsets.only(left: 20, right: 20, top: 30),
                          child: TextField(
                            key: Key('comment_text'),
                            controller: controller,
                            maxLines: 3,
                            style: TextStyle(color: Colors.white),
                            decoration: InputDecoration(
                                hintText: 'Enter comment here',
                                hintStyle: TextStyle(color: Colors.grey),
...
                                      width: 1),
                                )),
                          )),
                      Padding(
                          padding: EdgeInsets.only(top: 20),
                          child: ElevatedButton(
                            key: Key('comment_submit'),
                            onPressed: () async {
                              var response = await submitComment(
                                  controller.text, widget.post.id);

                              if (response['success']) {
                                if (mounted) {
...
                            children: [
                              Container(
                                decoration: const BoxDecoration(
                                    shape: BoxShape.circle,
                                    color: Colors.white),
                                child: IconButton(
                                    key: Key('edit_post'),
                                    color: Colors.white,
                                    onPressed: () {
                                      editSheet(context, text, id, is_public);
                                    },
                                    icon: const Icon(Icons.edit,
                                        size: 15, color: Colors.black)),
...
                                padding: const EdgeInsets.only(left: 5),
                                child: Container(
                                  decoration: const BoxDecoration(
                                      shape: BoxShape.circle,
                                      color: Colors.white),
                                  child: IconButton(
                                      key: Key('del_post'),
                                      color: Colors.white,
                                      onPressed: () async {
                                        var response = await deletePost(id);

                                        if (response['success']) {
                                          Navigator.pop(context);
...
                Comments(id),
                Padding(
                  padding: const EdgeInsets.only(bottom: 50),
                  child: Align(
                    alignment: Alignment.bottomRight,
                    child: FloatingActionButton(
                      key: Key('add_comment'),
                      backgroundColor: Colors.white,
                      onPressed: () {
                        addComment(context);
                      },
                      child: Icon(
                        Icons.add,
...
