...
                                  fontSize: 18,
                                  fontWeight: FontWeight.w600),
                            ),
                            Padding(
                                padding: const EdgeInsets.only(top: 10),
                                child: TextField(
                                  key: Key('old_pass'),
                                  obscureText: true,
                                  controller: oldpass,
                                  // onChanged: (value) => message = value,
                                  style: const TextStyle(
                                      color: Colors.white, fontSize: 15),
                                  decoration: InputDecoration(
...
                                  fontSize: 18,
                                  fontWeight: FontWeight.w600),
                            ),
                            Padding(
                                padding: const EdgeInsets.only(top: 10),
                                child: TextField(
                                  key: Key('new_pass'),
                                  obscureText: true,
                                  controller: newpass,
                                  // onChanged: (value) => message = value,
                                  style: const TextStyle(
                                      color: Colors.white, fontSize: 15),
                                  decoration: InputDecoration(
...
                                  fontSize: 18,
                                  fontWeight: FontWeight.w600),
                            ),
                            Padding(
                                padding: const EdgeInsets.only(top: 10),
                                child: TextField(
                                  key: Key('new_pass_c'),
                                  obscureText: true,
                                  controller: newpass_c,
                                  // onChanged: (value) => message = value,
                                  style: const TextStyle(
                                      color: Colors.white, fontSize: 15),
                                  decoration: InputDecoration(
...
                                )),
                          ],
                        )),
                    Padding(
                      padding: const EdgeInsets.only(top: 30),
                      child: ElevatedButton(
                        key: Key('pass_submit'),
                        style: ElevatedButton.styleFrom(
                            primary: Colors.white,
                            shape: RoundedRectangleBorder(
                                borderRadius: const BorderRadius.all(
                                    Radius.circular(2000)))),
                        child: Padding(
...
                                color: Theme.of(context).colorScheme.primary),
                          ),
                        ),
                        onPressed: () async {
                          if (newpass_c.text != newpass.text) {
                            ScaffoldMessenger.of(context).showSnackBar(SnackBar(
                                key: Key('error_snbar'),
                                content: RichText(
                                  textAlign: TextAlign.center,
                                  text: const TextSpan(
                                    text: 'New passwords don\'t match!',
                                    style: TextStyle(
                                        fontWeight: FontWeight.w800,
...
