...
                                    'Posts',
                                    style:
                                        TextStyle(fontWeight: FontWeight.w700),
                                  ),
                                  Icon(
                                    Icons.group,
                                    key: Key('friends_btn'),
                                  ),
                                  Icon(
                                    Icons.settings,
                                    key: Key('settings_btn'),
                                  )
                                ],
                              ),
                              Expanded(
                                  child: TabBarView(
                                physics: const NeverScrollableScrollPhysics(),
...
                                            ),
                                          )),
                                      Card(
                                        color: Colors.transparent,
                                        elevation: 0,
                                        child: ListTile(
                                            key: Key('ch_pass'),
                                            trailing: const IconButton(
                                                onPressed: null,
                                                icon: Icon(Icons.chevron_right,
                                                    color: Color.fromARGB(
                                                        255, 190, 190, 190))),
                                            textColor: Colors.white,
...
                                                              lastName)));
                                            }),
                                      ),
                                      Padding(
                                        padding: const EdgeInsets.only(top: 15),
                                        child: ElevatedButton(
                                          key: Key('logout_btn'),
                                          style: ElevatedButton.styleFrom(
                                              primary: Colors.white,
                                              shape: RoundedRectangleBorder(
                                                  borderRadius:
                                                      const BorderRadius.all(
                                                          Radius.circular(
...
